--- a/SatisfactoryServerGUI/ServerControls.xaml
+++ b/SatisfactoryServerGUI/ServerControls.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SatisfactoryServerGUI"
+             xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
              mc:Ignorable="d" 
              d:DesignWidth="454" d:DesignHeight="275">
     <Grid>
@@ -11,12 +12,32 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0"></Grid>
+        <Grid Grid.Row="0">
+            <TextBlock HorizontalAlignment="Left" Margin="10,51,0,0" Text="ServerQueryPort:" TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <TextBox x:Name="txtServerQueryPort" HorizontalAlignment="Left" Margin="107,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50" MaxLength="5" IsEnabled="{Binding ElementName=chkServerQueryPort, Path=IsChecked}" TextChanged="txtServerQueryPort_TextChanged"/>
+            <CheckBox x:Name="chkServerQueryPort" Content="Enabled" HorizontalAlignment="Left" Margin="169,51,0,0" VerticalAlignment="Top"/>
+
+            <TextBlock HorizontalAlignment="Left" Margin="10,86,0,0" Text="Port:" TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <TextBox x:Name="txtPort" HorizontalAlignment="Left" Margin="107,82,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50" MaxLength="5" IsEnabled="{Binding ElementName=chkPort, Path=IsChecked}" TextChanged="txtPort_TextChanged"/>
+            <CheckBox x:Name="chkPort" Content="Enabled" HorizontalAlignment="Left" Margin="169,86,0,0" VerticalAlignment="Top"/>
+
+            <TextBlock HorizontalAlignment="Left" Margin="10,122,0,0" Text="BeaconPort:" TextWrapping="Wrap" VerticalAlignment="Top"/>
+            <TextBox x:Name="txtBeaconPort" HorizontalAlignment="Left" Margin="107,122,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50" MaxLength="5" IsEnabled="{Binding ElementName=chkBeaconPort, Path=IsChecked}" TextChanged="txtBeaconPort_TextChanged"/>
+            <CheckBox x:Name="chkBeaconPort" Content="Enabled" HorizontalAlignment="Left" Margin="169,122,0,0" VerticalAlignment="Top"/>
+
+
+            <CheckBox x:Name="chkNoSteam" Content="NoSteam" HorizontalAlignment="Left" Margin="10,163,0,0" VerticalAlignment="Top"/>
+
+
+            <TextBlock HorizontalAlignment="Left" Margin="41,10,0,0" Text="Controls are subject to change as dedicated server controls mature" TextWrapping="Wrap" VerticalAlignment="Top"/>
+
+        </Grid>
 
         <Grid Grid.Row="1" HorizontalAlignment="Left" Margin="10,5,0,0">
-            <Button x:Name="btnStartStop" Content="Start/Stop Server" Height="25" Width="120" HorizontalAlignment="Left" Margin="15,5,0,0"></Button>
-            <Button x:Name="btnRestart" Content="Restart Server" Height="25" Width="100" HorizontalAlignment="Left" Margin="150,5,0,0"></Button>
+            <Button x:Name="btnStartStop" Content="Start/Stop Server" Height="25" Width="120" HorizontalAlignment="Left" Margin="15,5,0,0" Click="btnStartStop_Click"></Button>
+            <Button x:Name="btnRestart" Content="Restart Server" Height="25" Width="100" HorizontalAlignment="Left" Margin="150,5,0,0" Click="btnRestart_Click"></Button>
             <Button x:Name="btnUpdate" Content="Install/Update Server" Height="25" Width="150" HorizontalAlignment="Left" Margin="270,5,0,0" Click="btnUpdate_Click"></Button>
         </Grid>
+
     </Grid>
 </UserControl>
