--- a/SatisfactoryServerGUI/ServerDetails.xaml
+++ b/SatisfactoryServerGUI/ServerDetails.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:SatisfactoryServerGUI"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid Loaded="Grid_Loaded">
         <Grid.RowDefinitions>
             <RowDefinition Height="60*"/>
             <RowDefinition Height="40*"/>
@@ -17,6 +17,7 @@
                 <TextBox x:Name="txtExternIP" HorizontalAlignment="Left" Margin="140,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
                 <TextBlock HorizontalAlignment="Left" Margin="10,60,0,0" Text="Internal IP Address:" TextWrapping="Wrap" VerticalAlignment="Top"/>
                 <TextBox x:Name="txtInternIP" HorizontalAlignment="Left" Margin="140,60,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
+                <Button x:Name="btnRefresh" Content="Refresh IPs" HorizontalAlignment="Left" Margin="10,132,0,0" VerticalAlignment="Top" Click="btnRefresh_Click"/>
             </Grid>
         </GroupBox>
 
